--- a/test.pug
+++ b/test.pug
@@ -9,3 +9,6 @@ html(lang="en")
         link(rel="stylesheet" href="css/style.css")
         link(rel="shortcut icon" type="image/png" href="img/favicon.png")
         title nexter &mdash; your home, your freedom
+    
+    body
+        p Happy sweet
