--- a/test.pug
+++ b/test.pug
@@ -14,8 +14,30 @@ html(lang="en")
             div(class="sidebar")
                 button(class="nav-btn")
             
-            div(class="header") Header
-            
+            div(class="header")
+                img(
+                    class="header__logo"
+                    src=require("./img/logo.png")
+                    alt="Nexter Logo"
+                )
+                h3(class="heading-3") Your own home:
+                h1(class="heading-1") The ultimate personal freedom
+                button(class="btn header__btn") View our properties
+                div(class="header__seenon-text") Seen on
+                div(class="header__seenon-logos")
+                    -
+                        var logos = [
+                            "logo-bbc.png",
+                            "logo-forbes.png",
+                            "logo-bi.png",
+                            "logo-techcrunch.png"
+                        ]
+                    each logo, index in logos
+                        img(
+                            src=require(`./img/${logo}`)
+                            alt=`Seen on logo ${index + 1}`
+                        )
+
             div(class="realtors") Top 3 realtors
 
             section(class="features")
