--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -23,14 +23,32 @@
         justify-self: start;
     }
 
-    &__seenon-test {
+    &__seenon-text {
+        display: grid;
+        grid-template-columns: 1fr max-content 1fr;
+        align-items: center;
+        grid-gap: 1.5rem;
 
+        font-size: 1.6rem;
+        color: $color-grey-light-2;
+
+        &::before,
+        &::after {
+            content: "";
+            height: 1px;
+            display: block;
+            background-color: currentColor;
+        }
     }
 
     &__seenon-logos {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
 
         img {
             height: 2.5rem;
+            filter: brightness(70%)
         }
     }
 }
