--- a/test.pug
+++ b/test.pug
@@ -39,7 +39,24 @@ html(lang="en")
                         )
 
             div(class="realtors")
-                h3()
+                h3(class="heading-3") Top 3 Realtors
+                div(class="realtors__list")
+                    -
+                        var realtors = [
+                            { name: 'Erik Feinman', sold: 245},
+                            { name: 'Kim Brown', sold: 212},
+                            { name: 'Toby Ramsey', sold: 198},
+                        ]
+                    each realtor, index in realtors
+                        img(
+                            class="realtors__img"
+                            alt=`Realtor ${index + 1}`
+                            src=require(`./img/realtor-${index + 1}.jpeg`)
+                        )
+                        div(class="realtors__details")
+                            h4(class="heading-4 heading-4--light")= `${realtor.name}`
+                            p(class="realtors__sold")= `${realtor.sold} houses sold`
+
 
             section(class="features")
                 -
