--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,9 +8,9 @@
     padding-top: 4rem;
 
     display: grid;
-    grid-template-rows: 1fr min-content 6rem 1fr;
+    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
     grid-row-gap: 1.5rem;
-    grid-template-columns: max-content;
+    grid-template-columns: minmax(min-content ,max-content);
     justify-content: center;
 
     &__logo {
@@ -45,9 +45,11 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         justify-items: center;
+        align-items: center;
 
         img {
-            height: 2.5rem;
+            max-height: 2.5rem;
+            max-width: 100%;
             filter: brightness(70%)
         }
     }
